Fixed UI overlapping

--- a/static/base.css
+++ b/static/base.css
@@ -26,7 +26,7 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     width: 100%;
 }
