--- a/static/view.css
+++ b/static/view.css
@@ -45,7 +45,7 @@
     align-items: center;
     display: flex;
     gap: var(--gap);
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     padding: var(--medium-gap);
 }
@@ -59,8 +59,8 @@
 .view-container audio,
 .view-container img,
 .view-container video {
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     object-fit: contain;
-    width: 100vw;
+    width: 100%;
 }
